[package]
name = "random-art-online"
version = "0.1.0"
authors = ["R4chel and jeffzh4ng"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.47"
wasm-bindgen = "0.2.70"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
